Updated Java Doc